@@ -42,7 +42,8 @@ if no such name can be established, the nodename of the system as determined
 by
 .BR uname (2).
 \fIdomain\fP may be used in virtual-domain authentication where there is
-more than one specified listening address; see below.
+more than one specified listening address; see below. Note that there may not
+be any whitespace within the specification of each listener.
 
 To listen for connections on any interface and the default port, the directive
 
